Style image upload button + fix tabs on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -71,6 +71,53 @@ a {
     height: 200px;
 }
 
+#postImgBtn {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+	background-color:#ffffff;
+	-moz-border-radius:17px;
+	-webkit-border-radius:17px;
+	border-radius:17px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-size:16px;
+	font-weight:bold;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    text-align: center;
+}
+#postImgBtn:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+	background:-moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:-ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+	background-color:#f6f6f6;
+}
+
+#postImgBtn:active {
+	position:relative;
+	top:1px;
+}
+
+
 #progressBarBack {
     width: 100%;
     background-color: gray;
@@ -324,6 +371,16 @@ td {
         margin-left: 15px;
         margin-right: 25px;
         width: auto;
+    }
+
+    .tabs {
+        padding: 6px 7%;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .tabs {
+        padding: 6px 3%;
     }
 }
 
